crates/strider-analyze/tests/snapshots/aarch64be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x210200:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "20" [label="φ q1", shape=house, fillcolor="#163030"];
  "13" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v22" [color="#888888", style=dashed];
  "v22" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x210200:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "14" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "14" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "32" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "38" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "42" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "44" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "47" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ q0", shape=house, fillcolor="#163030"];
  "13" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v50" [color="#888888", style=dashed];
  "v50" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v51" [color="#888888", style=dashed];
  "v51" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ x1", shape=house, fillcolor="#163030"];
  "13" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v52" [color="#888888", style=dashed];
  "v52" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v53" [color="#888888", style=dashed];
  "v53" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="φ Val", shape=house, fillcolor="#163030"];
  "13" -> "54" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v59" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v59" [color="#888888", style=dashed];
  "v59" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v62" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v62" [color="#888888", style=dashed];
  "v62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Mem", shape=house, fillcolor="#163030"];
  "13" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "63" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "65" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "14" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v69" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v69" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "57" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "70" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "72" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "5" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "12" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
